tests/negative/unterminated_block_comment.rkl
(print 1) /* this comment never closes
